--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   avatar           : ../assets/images/bio-photo.jpg  # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Pune, India"
-  email            : "email.com"
+  email            : 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -130,7 +130,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+       url: "https://pruthvi1009.github.io"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
