--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Pruthviraj's Website"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Pruthviraj Desai"
-description              : "My amazing personal website."
+description              : "This is my amazing personal website."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "Pruthviraj Desai"
-  avatar           : ../assets/images/bio-photo.jpg  # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/bio-photo.jpg  # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Pune, India"
   email            : 
