--- a/_config.yml
+++ b/_config.yml
@@ -280,3 +280,11 @@ defaults:
       comments: # true
       share: true
       related: true
+      
+defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
