--- a/_config.yml
+++ b/_config.yml
@@ -271,7 +271,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "/_posts/2021-04-05-Site Upgraded.md"
       type: posts
     values:
       layout: single
